bug 1218762 - proxy ia2Accessible::scrollTo{,Point}() r=davidb